[tool.poetry]
name = "mojo-startup"
description = "Automation Mojo Startup Package"
version = "1.3.11"
authors = ["Myron W. Walker"]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typing-extensions = "^4.11.0"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
