[tool.poetry]
name = "mojo-startup"
description = "Automation Mojo Startup Package"
version = "2.0.2"
authors = ["Myron W. Walker"]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typing-extensions = "^4.11.0"
mojo-collections = ">=2.0.1 <2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
